# practical_rust_project

./: README.md
catsay/: Cargo.toml
catsay/src/: main.rs
catsay/tests/: integration_test.rs
cursive/: Cargo.toml
cursive/src/: main.rs
gtk-rs/: 240_F_97589769_t45CqXyzjz0KXwoBZT9PRaWGHRk5hQqQ.jpg:Zone.Identifier  Cargo.toml
gtk-rs/src/: main.rs
