[package]
name = "catsay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.15"
colored = "1.7.0"
failure = "0.1.5"
exitfailure = "0.5.1"
predicates = "1.0.0"
assert_cmd = "0.11.1"
cursive = "0.11.2"
