[package]
name = "gtk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.8.0" # the underlying GLib bindings
[dependencies.gtk]
version = "0.8.0" # the gtk crate version
features = ["v3_24"] # system gtk version